--- a/index.html
+++ b/index.html
@@ -1051,8 +1051,11 @@
         </div>
       </section>
       <section>
-        <p class="text-[3rem] text-[#121212] relative left-[32rem]">Why Choose Us</p>
+        <div class="mt-[10rem]">
+          <p class="text-[3rem] text-[#121212] relative left-[32rem]">Why Choose Us</p>
         <p class="text-[1rem] text-[#121212] relative left-[13rem]">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
+        
            <div>
 <div class="grid grid-cols-3 my-[10rem]" >
   <div class="mt-9">
